ajustement css/html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <div class="container bg-1">
                                <header class="flex justify-between items-center rounded-lg w-full bg py-2 px-6 mt">
                                               <a href=".">
-                                                      <p><img class="h-20 ml-1 bg" src="/images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
+                                                      <p><img class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
                                               </a>
                                               <nav class="flex">
                                                       <ul class="list-none font-bold">
@@ -22,8 +22,8 @@
                                <main>
                                               <div id="produitlist" class="flex col-12 mt-6 justify-content container">
                                                              <article class="bg flex direction col-4 border-radius ml-1">
-                                                                     <a href="">
-                                                                         <img class="h-10 bg flex border-radius pt-1" src="images/teddy_1.jpg" alt="nounours en peluche marron">
+                                                                     <a href="nounours html/teddy-1.html">
+                                                                         <img class="h-10 bg flex border-radius pt-1" src="http://localhost:3000/images/teddy_1.jpg" alt="nounours en peluche marron">
                                                                          <div class="flex justify-between items-center">
                                                                              <h1>Norbert</h1>
                                                                              <p class="">29€</p>
@@ -31,7 +31,7 @@
                                                                      </a>
                                                              </article>
                                                              <article class="bg flex direction col-4 border-radius ml-1">
-                                                                <a href="">
+                                                                <a href="nounours html/teddy-2.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_2.jpg" alt="nounours en peluche blanc">
                                                                     <div class="flex justify-between items-center pt-1">
                                                                         <h1>Arnold</h1>
@@ -40,7 +40,7 @@
                                                                 </a>
                                                         </article>
                                                         <article class="bg flex direction col-4 border-radius ml-1">
-                                                                <a href="">
+                                                                <a href="nounours html/teddy-3.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_3.jpg" alt="nounours en peluche marron avec sa fille">
                                                                     <div class="flex justify-between items-center pt-1">
                                                                         <h1>Lenny et Carl</h1>
@@ -51,7 +51,7 @@
                                               </div>
                                                  <div id="produitlist" class="flex col-12 mt-6 justify-content container">
                                                         <article class="bg flex direction col-6 border-radius ml-1">
-                                                                <a href="">
+                                                                <a href="nounours html/teddy-4.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_4.jpg" alt="nounours en peluche marron avec t-shirt">
                                                                     <div class="flex justify-between items-center pt-1">
                                                                         <h1>Gustav</h1>
@@ -60,7 +60,7 @@
                                                                 </a>
                                                         </article>
                                                         <article class="bg flex direction col-6 border-radius ml-1">
-                                                                <a href="">
+                                                                <a href="nounours html/teddy-5.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_5.jpg" alt="nounours en peluche blanc">
                                                                     <div class="flex justify-between items-center pt-1">
                                                                         <h1>Garfunkel</h1>
