--- a/nounours html/teddy-3.html
+++ b/nounours html/teddy-3.html
@@ -5,13 +5,13 @@
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
                 <meta name="description" content="site de e-commerce pour vos peluches">
                 <title>orinoco, site de e-commerce pour vos peluches</title>
-                <link rel="stylesheet" href="css/accueil.css"/>
+                <link rel="stylesheet" href="../css/accueil.css"/>
         </head>
         <body>
                 <div class="container bg-1">
                                <header class="flex justify-between items-center rounded-lg w-full bg py-2 px-6 mt">
                                               <a href=".">
-                                                      <p><img class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
+                                                      <p><img class="h-20 ml-1 bg" src="../images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
                                               </a>
                                               <nav class="flex">
                                                       <ul class="list-none font-bold">
