--- a/nounours html/teddy-1.html
+++ b/nounours html/teddy-1.html
@@ -9,16 +9,46 @@
         </head>
         <body>
                 <div class="container bg-1">
-                               <header class="flex justify-between items-center rounded-lg w-full bg py-2 px-6 mt">
-                                              <a href=".">
+                               <header class="flex justify-content items-center rounded-lg w-full bg py-2 px-6 mt my-1">
+                                              <a href="../index.html">
                                                       <p><img class="h-20 ml-1 bg" src="../images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
                                               </a>
                                               <nav class="flex">
                                                       <ul class="list-none font-bold">
-                                                                     <a class="px-4 py-4" href="panier.html">Panier</a>
+                                                                     <a class="px-4 py-4" href="../panier.html">Panier</a>
                                                       </ul>
                                               </nav>
                                </header>
+                               <main>
+                                     <div class="flex direction container bg my-1">
+                                             <h1 class="flex center">Norbert</h1>
+                                         <div class="flex">
+                                             <div class="">
+                                                     <p class="">
+                                                             <img class="h-1" src="../images/teddy_1.jpg" alt="nounours en peluche marron">
+                                                     </p>
+                                             </div>
+                                             <div class="flex direction wrap">
+                                                     <p>description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                     <div>
+                                                             <h2>Choix de la couleur du produit</h2>
+                                                             <div class="container flex h-10 justify-content">
+                                                                     <div class="flex h-2 border-radius " style="background-color: tan;"></div>
+                                                                     <div class="flex h-2 border-radius" style="background-color: chocolate;"></div>
+                                                                     <div class="flex h-2 border-radius" style="background-color: black;"></div>
+                                                                     <div class="flex h-2 border-radius" style="background-color: white;"></div>
+                                                             </div>
+                                                     </div>
+                                                     <button class="flex bg-2 my-1 border-radius">Ajouter au panier pour un prix de 29€</button>
+                                             </div>
+                                        </div>
+                                     </div>  
+                               </main>
+                               <footer>
+                                <div class="flex pt-2 bg">
+                                        <p><a class="ml-1 fs-1" href="teddy-1.html">Haut de la page</a> </p>
+                                </div>
+                        </footer>
                  </div>
         </body>
 </html>
