--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </head>
         <body>
                 <div class="container bg-1">
-                               <header class="flex justify-between items-center rounded-lg w-full bg py-2 px-6 mt">
+                               <header class="flex justify-content items-center rounded-lg w-full bg py-2 px-6 mt">
                                               <a href=".">
                                                       <p><img class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
                                               </a>
@@ -20,11 +20,11 @@
                                               </nav>
                                </header>
                                <main>
-                                              <div id="produitlist" class="flex col-12 mt-6 justify-content container">
-                                                             <article class="bg flex direction col-4 border-radius ml-1">
+                                              <div id="produitlist" class="flex col-12 mt-6 justify-content container ">
+                                                             <article class="bg flex direction col-4 border-radius ml-1 ">
                                                                      <a href="nounours html/teddy-1.html">
-                                                                         <img class="h-10 bg flex border-radius pt-1" src="http://localhost:3000/images/teddy_1.jpg" alt="nounours en peluche marron">
-                                                                         <div class="flex justify-between items-center">
+                                                                         <img class="h-10 bg flex border-radius pt-1" src="images/teddy_1.jpg" alt="nounours en peluche marron">
+                                                                         <div class="flex justify-content items-center">
                                                                              <h1>Norbert</h1>
                                                                              <p class="">29€</p>
                                                                         </div>
@@ -33,7 +33,7 @@
                                                              <article class="bg flex direction col-4 border-radius ml-1">
                                                                 <a href="nounours html/teddy-2.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_2.jpg" alt="nounours en peluche blanc">
-                                                                    <div class="flex justify-between items-center pt-1">
+                                                                    <div class="flex justify-content items-center pt-1">
                                                                         <h1>Arnold</h1>
                                                                         <p class="">39€</p>
                                                                    </div>
@@ -42,18 +42,18 @@
                                                         <article class="bg flex direction col-4 border-radius ml-1">
                                                                 <a href="nounours html/teddy-3.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_3.jpg" alt="nounours en peluche marron avec sa fille">
-                                                                    <div class="flex justify-between items-center pt-1">
+                                                                    <div class="flex justify-content items-center pt-1">
                                                                         <h1>Lenny et Carl</h1>
                                                                         <p class="">59€</p>
                                                                    </div>
                                                                 </a>
                                                         </article>
                                               </div>
-                                                 <div id="produitlist" class="flex col-12 mt-6 justify-content container">
-                                                        <article class="bg flex direction col-6 border-radius ml-1">
+                                                 <div id="produitlist" class="flex col-12 mt-6 justify-content container ">
+                                                        <article class="bg flex direction col-6 border-radius ml-1 my-1">
                                                                 <a href="nounours html/teddy-4.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_4.jpg" alt="nounours en peluche marron avec t-shirt">
-                                                                    <div class="flex justify-between items-center pt-1">
+                                                                    <div class="flex justify-content items-center pt-1">
                                                                         <h1>Gustav</h1>
                                                                         <p class="">45€</p>
                                                                    </div>
@@ -62,7 +62,7 @@
                                                         <article class="bg flex direction col-6 border-radius ml-1">
                                                                 <a href="nounours html/teddy-5.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_5.jpg" alt="nounours en peluche blanc">
-                                                                    <div class="flex justify-between items-center pt-1">
+                                                                    <div class="flex justify-content items-center pt-1">
                                                                         <h1>Garfunkel</h1>
                                                                         <p class="">55€</p>
                                                                    </div>
@@ -70,6 +70,11 @@
                                                         </article>
                                                  </div>
                                </main>
+                               <footer>
+                                       <div class="flex pt-2 bg">
+                                               <p><a class="ml-1 fs-1" href="index.html">Accueil</a> </p>
+                                       </div>
+                               </footer>
                 </div>
         </body>
 
