--- a/nounours html/teddy-2.html
+++ b/nounours html/teddy-2.html
@@ -4,7 +4,7 @@
                 <meta charset="utf-8">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
                 <meta name="description" content="site de e-commerce pour vos peluches">
-                <title>orinoco, site de e-commerce pour vos peluches</title>
+                <title>Arnold Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="../css/accueil.css"/>
         </head>
         <body>
@@ -38,7 +38,9 @@
                                                                 <div class="flex h-2 border-radius" style="background-color: white;"></div>
                                                         </div>
                                                 </div>
+                                                <a href="../panier.html">
                                                 <button class="flex bg-2 my-1 border-radius">Ajouter au panier pour un prix de 39€</button>
+                                                </a>
                                         </div>
                                    </div>
                                 </div>  
