--- a/nounours html/teddy-5.html
+++ b/nounours html/teddy-5.html
@@ -4,7 +4,7 @@
                 <meta charset="utf-8">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
                 <meta name="description" content="site de e-commerce pour vos peluches">
-                <title>orinoco, site de e-commerce pour vos peluches</title>
+                <title>Garfunkel Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="../css/accueil.css"/>
         </head>
         <body>
@@ -27,19 +27,21 @@
                                                 <p class="">
                                                         <img class="h-1 col-12" src="../images/teddy_5.jpg" alt="nounours en peluche beige">
                                                 </p>
-                                        </div>
-                                        <div class="flex direction wrap col-6">
-                                                <p>description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                                <div>
+                                         </div>
+                                         <div class="flex direction wrap col-6">
+                                                 <p>description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                 <div>
                                                         <h2>Choix de la couleur du produit</h2>
                                                         <div class="container flex h-10 justify-content">
                                                                <div class="flex h-2 border-radius" style="background-color: beige;"></div>
                                                                <div class="flex h-2 border-radius" style="background-color: tan;"></div> 
                                                                <div class="flex h-2 border-radius" style="background-color:chocolate;"></div>  
                                                         </div>
-                                                </div>
-                                                <button class="flex bg-2 my-1 border-radius">Ajouter au panier pour un prix de 55€</button>
-                                        </div>
+                                                 </div>
+                                                 <a href="../panier.html">
+                                                 <button class="flex bg-2 my-1 border-radius">Ajouter au panier pour un prix de 55€</button>
+                                                 </a> 
+                                         </div>
                                    </div>
                                 </div>  
                           </main>
