--- a/orderstatus.html
+++ b/orderstatus.html
@@ -4,13 +4,13 @@
                 <meta charset="utf-8">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
                 <meta name="description" content="site de e-commerce pour vos peluches">
-                <title>orinoco, site de e-commerce pour vos peluches</title>
+                <title>Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="css/accueil.css"/>
         </head>
         <body>
                 <div class="container bg-1">
                                <header class="flex justify-content items-center rounded-lg w-full bg py-2 px-6 mt">
-                                              <a href=".">
+                                              <a href="index.html">
                                                       <p><img class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
                                               </a>
                                               <nav class="flex">
@@ -20,7 +20,9 @@
                                               </nav>
                                </header>
                                <main>
-
+                                         <div class="my-2">
+                                                        <p class="fs-2 ">Félicitation, votre commande a bien été enregistrée</p>
+                                         </div>
                                </main>
                                <footer>
                                              <div class="flex pt-2 bg">
