--- a/panier.html
+++ b/panier.html
@@ -4,13 +4,13 @@
                 <meta charset="utf-8">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
                 <meta name="description" content="site de e-commerce pour vos peluches">
-                <title>orinoco, site de e-commerce pour vos peluches</title>
+                <title>Panier Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="css/accueil.css"/>
         </head>
         <body>
                 <div class="container bg-1">
-                               <header class="flex justify-between items-center rounded-lg w-full bg py-2 px-6 mt">
-                                              <a href=".">
+                               <header class="flex justify-content items-center rounded-lg w-full bg py-2 px-6 mt">
+                                              <a href="index.html">
                                                       <p><img class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
                                               </a>
                                               <nav class="flex">
@@ -19,6 +19,64 @@
                                                       </ul>
                                               </nav>
                                </header>
+                               <main>
+                                         <section class="bg mt">
+                                                 <table class="container ml-1">
+                                                         <h2>votre commande</h2>
+                                                         <thead>
+                                                           <tr>
+                                                                 <th>Produit</th>
+                                                                 <th>Quantité</th>
+                                                                 <th>Prix</th>
+                                                                 <th>total</th>
+                                                           </tr>
+                                                         </thead>
+                                                 </table>
+                                         </section>
+                                         <section class="bg mt">
+                                                 <div class="ml-1">
+                                                 <h2>vos coordonnées</h2>
+                                                 <div>
+                                                       <form>
+                                                           <div class="flex justify-content mt"> 
+                                                                <div class="flex direction">
+                                                                       <label class="label" for="firstName">Prénom</label>
+                                                                       <input class="input" type="text" name="firstName">
+                                                                 </div>
+                                                                 <div class="flex direction">
+                                                                         <label class="label" for="lastName">Nom</label>
+                                                                         <input class="input" type="text" name="lastName">
+                                                                 </div> 
+                                                                 <div class="flex direction">
+                                                                         <label class="label" for="mail">Adresse e-mail</label>
+                                                                         <input class="input" type="email" name="mail">
+                                                                 </div>
+                                                           </div> 
+                                                           <div class="flex justify-content mt">
+                                                                   <div class="flex direction">
+                                                                           <label class="label" for="adresse">Adresse</label>
+                                                                           <input class="input" type="text" name="adresse">
+                                                                   </div>
+                                                                   <div class="flex direction">
+                                                                           <label class="label" for="codePostal">Code postal</label>
+                                                                           <input class="input" type="number" name="codePostal">
+                                                                   </div>
+                                                                   <div class="flex direction">
+                                                                           <label class="label" for="ville">ville</label>
+                                                                           <input class="input" type="text" name="ville">
+                                                                   </div>
+                                                           </div>
+                                                           <button class="mt">commande</button>
+                                                       </form>
+                                                 </div>
+                                                 </div>                                                        
+                                         </section>
+                               </main>
+                               <footer>
+                                <div class="flex pt-2 bg">
+                                        <p><a class="ml-1 fs-1" href="panier.html">Haut de la page</a> </p>
+                                </div>
+                        </footer>
                 </div>
         </body>
 </html>
