finition html/css

--- a/nounours html/teddy-1.html
+++ b/nounours html/teddy-1.html
@@ -20,11 +20,11 @@
                                               </nav>
                                </header>
                                <main>
-                                     <div class="flex direction container bg my-1">
+                                     <div class="flex direction container bg my-1 column">
                                              <h1 class="flex center">Norbert</h1>
-                                         <div class="flex">
-                                             <div class="">
-                                                     <p class="">
+                                         <div class="flex column col-12">
+                                             <div>
+                                                     <p>
                                                              <img class="h-1" src="../images/teddy_1.jpg" alt="nounours en peluche marron">
                                                      </p>
                                              </div>
