--- a/nounours html/teddy-2.html
+++ b/nounours html/teddy-2.html
@@ -20,11 +20,11 @@
                                               </nav>
                                </header>
                                <main>
-                                <div class="flex direction container bg my-1">
+                                <div class="flex direction container bg my-1 col-12">
                                         <h1 class="flex center">Arnold</h1>
-                                    <div class="flex">
-                                        <div class="">
-                                                <p class="">
+                                    <div class="flex column">
+                                        <div>
+                                                <p>
                                                         <img class="h-1" src="../images/teddy_2.jpg" alt="nounours en peluche beige">
                                                 </p>
                                         </div>
