--- a/nounours html/teddy-4.html
+++ b/nounours html/teddy-4.html
@@ -20,9 +20,9 @@
                                               </nav>
                                </header>
                                <main>
-                                <div class="flex direction container bg my-1">
+                                <div class="flex direction container bg my-1 col-12">
                                         <h1 class="flex center">Gustav</h1>
-                                    <div class="flex">
+                                    <div class="flex col-12 column">
                                         <div class="">
                                                 <p class="">
                                                         <img class="h-1" src="../images/teddy_4.jpg" alt="nounours en peluche marron">
