--- a/panier.html
+++ b/panier.html
@@ -31,6 +31,20 @@
                                                                  <th>total</th>
                                                            </tr>
                                                          </thead>
+                                                         <tbody>
+                                                                 <tr>
+                                                                         <th></th>
+                                                                         <th><input class="input" type="number"> </th>
+                                                                         <th><input class="input" type="number"> </th>
+                                                                         <th><input class="input" type="number"> </th>
+                                                                 </tr>
+                                                         </tbody>
+                                                         <tfoot>
+                                                                 <tr>
+                                                                         <th>total</th>
+                                                                         <th><input class="input" type="number"> </th>
+                                                                 </tr>
+                                                         </tfoot>
                                                  </table>
                                          </section>
                                          <section class="bg mt">
@@ -38,7 +52,7 @@
                                                  <h2>vos coordonnées</h2>
                                                  <div>
                                                        <form>
-                                                           <div class="flex justify-content mt"> 
+                                                           <div class="flex justify-content mt col-12 column"> 
                                                                 <div class="flex direction">
                                                                        <label class="label" for="firstName">Prénom</label>
                                                                        <input class="input" type="text" name="firstName">
@@ -52,7 +66,7 @@
                                                                          <input class="input" type="email" name="mail">
                                                                  </div>
                                                            </div> 
-                                                           <div class="flex justify-content mt">
+                                                           <div class="flex justify-content mt col-12 column">
                                                                    <div class="flex direction">
                                                                            <label class="label" for="adresse">Adresse</label>
                                                                            <input class="input" type="text" name="adresse">
@@ -66,7 +80,9 @@
                                                                            <input class="input" type="text" name="ville">
                                                                    </div>
                                                            </div>
+                                                           <a href="orderstatus.html">
                                                            <button class="mt">commande</button>
+                                                           </a>
                                                        </form>
                                                  </div>
                                                  </div>                                                        
