--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
                                               </nav>
                                </header>
                                <main>
-                                              <div id="produitlist" class="flex col-12 mt-6 justify-content container ">
-                                                             <article class="bg flex direction col-4 border-radius ml-1 ">
+                                              <div id="produitlist" class="flex col-12 mt-6 justify-content container column">
+                                                             <article class="bg flex direction col-12 col-xl-4 border-radius ml-1 column my-1">
                                                                      <a href="nounours html/teddy-1.html">
                                                                          <img class="h-10 bg flex border-radius pt-1" src="images/teddy_1.jpg" alt="nounours en peluche marron">
                                                                          <div class="flex justify-content items-center">
                                                                              <h1>Norbert</h1>
-                                                                             <p class="">29€</p>
+                                                                             <p>29€</p>
                                                                         </div>
                                                                      </a>
                                                              </article>
-                                                             <article class="bg flex direction col-4 border-radius ml-1">
+                                                             <article class="bg flex direction col-12 col-xl-4 border-radius ml-1 column my-1">
                                                                 <a href="nounours html/teddy-2.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_2.jpg" alt="nounours en peluche blanc">
                                                                     <div class="flex justify-content items-center pt-1">
@@ -39,7 +39,7 @@
                                                                    </div>
                                                                 </a>
                                                         </article>
-                                                        <article class="bg flex direction col-4 border-radius ml-1">
+                                                        <article class="bg flex direction col-12 col-xl-4 border-radius ml-1 column my-1">
                                                                 <a href="nounours html/teddy-3.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_3.jpg" alt="nounours en peluche marron avec sa fille">
                                                                     <div class="flex justify-content items-center pt-1">
@@ -49,8 +49,8 @@
                                                                 </a>
                                                         </article>
                                               </div>
-                                                 <div id="produitlist" class="flex col-12 mt-6 justify-content container ">
-                                                        <article class="bg flex direction col-6 border-radius ml-1 my-1">
+                                                 <div id="produitliste" class="flex col-12 mt-6 justify-content container column my-1">
+                                                        <article class="bg flex direction col-12 col-xl-6 border-radius ml-1 my-1 column">
                                                                 <a href="nounours html/teddy-4.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_4.jpg" alt="nounours en peluche marron avec t-shirt">
                                                                     <div class="flex justify-content items-center pt-1">
@@ -59,7 +59,7 @@
                                                                    </div>
                                                                 </a>
                                                         </article>
-                                                        <article class="bg flex direction col-6 border-radius ml-1">
+                                                        <article class="bg flex direction col-12 col-xl-6 border-radius ml-1 column ">
                                                                 <a href="nounours html/teddy-5.html">
                                                                     <img class="h-10 bg flex border-radius pt-1" src="images/teddy_5.jpg" alt="nounours en peluche blanc">
                                                                     <div class="flex justify-content items-center pt-1">
