--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
                 <meta name="description" content="site de e-commerce pour vos peluches">
                 <title>Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="css/accueil.css"/>
+                <script src="js/index.js" defer></script>
         </head>
         <body>
                 <div class="container bg-1">
                                <header class="flex justify-content items-center rounded-lg w-full bg py-2 px-6 mt">
                                               <a href=".">
-                                                      <p><img class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
+                                                      <p><img id="imgNorbert" class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
                                               </a>
                                               <nav class="flex">
                                                       <ul class="list-none font-bold">
