changement html css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                </header>
                                <main>
                                               <div id="produitlist" class="flex col-12 mt-6 justify-content container column">
-                                                             <article class="bg flex direction col-12 col-xl-4 border-radius ml-1 column my-1">
+                                                             <!-- <article class="bg flex direction col-12 col-xl-4 border-radius ml-1 column my-1">
                                                                      <a href="nounours html/teddy-1.html">
                                                                          <img class="h-10 bg flex border-radius pt-1" src="images/teddy_1.jpg" alt="nounours en peluche marron">
                                                                          <div class="flex justify-content items-center">
@@ -68,7 +68,7 @@
                                                                         <p class="">55€</p>
                                                                    </div>
                                                                 </a>
-                                                        </article>
+                                                        </article> -->
                                                  </div>
                                </main>
                                <footer>
