--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                                                       </ul>
                                               </nav>
                                </header>
-                               <main>
+                               <main id="main">
                                               <div id="produitlist" class="flex col-12 mt-6 justify-content container column">
                                                              <!-- <article class="bg flex direction col-12 col-xl-4 border-radius ml-1 column my-1">
                                                                      <a href="nounours html/teddy-1.html">
