--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                               </nav>
                                </header>
                                <main id="main">
-                                              <div id="produitlist" class="flex col-12 mt-6 justify-content container column">
+                                              <a id="produitlist" class="flex col-12 mt-6 justify-content container column" href="../mathieuTartarin_07-08-2021/article.html">
                                                              <!-- <article class="bg flex direction col-12 col-xl-4 border-radius ml-1 column my-1">
                                                                      <a href="nounours html/teddy-1.html">
                                                                          <img class="h-10 bg flex border-radius pt-1" src="images/teddy_1.jpg" alt="nounours en peluche marron">
@@ -69,7 +69,7 @@
                                                                    </div>
                                                                 </a>
                                                         </article> -->
-                                                 </div>
+                                                </a>
                                </main>
                                <footer>
                                        <div class="flex pt-2 bg">
