--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
                 <meta charset="utf-8">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
                 <meta name="description" content="site de e-commerce pour vos peluches">
+                <meta name="viewport" content="width=device-width" />
                 <title>Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="css/accueil.css"/>
                 <script src="js/index.js" defer></script>
@@ -21,7 +22,7 @@
                                               </nav>
                                </header>
                                <main id="main">
-                                              <a id="produitlist" class="flex col-12 mt-6 justify-content container column" href="../mathieuTartarin_07-08-2021/article.html">
+                                              <a id="produitlist" class="flex col-12 mt-6 justify-content container bg column" href="../mathieuTartarin_07-08-2021/article.html">
                                                              <!-- <article class="bg flex direction col-12 col-xl-4 border-radius ml-1 column my-1">
                                                                      <a href="nounours html/teddy-1.html">
                                                                          <img class="h-10 bg flex border-radius pt-1" src="images/teddy_1.jpg" alt="nounours en peluche marron">
