--- a/article.html
+++ b/article.html
@@ -20,6 +20,16 @@
                                                      </ul>
                                              </nav>
                               </header>
+                              <main id="main">
+                                      <div id="" class="">
+
+                                      </div>
+                              </main>
+                              <footer>
+                                <div class="flex pt-2 bg">
+                                        <p><a class="ml-1 fs-1" href="index.html">Accueil</a> </p>
+                                </div>
+                        </footer>
 
         </body>
 </html>
