--- a/article.html
+++ b/article.html
@@ -6,7 +6,7 @@
                 <meta name="description" content="site de e-commerce pour vos peluches">
                 <title>Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="css/accueil.css"/>
-                <script src="js/index.js" defer></script>
+                <script src="js/article.js" defer></script>
         </head>
         <body>
                <div class="container bg-1">
@@ -21,9 +21,12 @@
                                              </nav>
                               </header>
                               <main id="main">
-                                      <div id="" class="">
+                                      <div id="produitlist" class="">
 
                                       </div>
+                                      <a href="panier.html">
+                                      <button class=" flex items-center border-radius">ajouter au panier</button>
+                                      </a>
                               </main>
                               <footer>
                                 <div class="flex pt-2 bg">
