--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                                               </nav>
                                </header>
                                <main id="main">
-                                              <a id="produitlist" class="flex col-12 mt-6 justify-content container bg column" href="../mathieuTartarin_07-08-2021/article.html">
-                                                             <!-- <article class="bg flex direction col-12 col-xl-4 border-radius ml-1 column my-1">
+                                              <div id="produitlist" class="flex col-12 mt-6 justify-content container bg column" >
+                                                           <!-- <article class="bg flex direction col-12 col-xl-4 border-radius ml-1 column my-1">
                                                                      <a href="nounours html/teddy-1.html">
                                                                          <img class="h-10 bg flex border-radius pt-1" src="images/teddy_1.jpg" alt="nounours en peluche marron">
                                                                          <div class="flex justify-content items-center">
@@ -68,9 +68,9 @@
                                                                         <h1>Garfunkel</h1>
                                                                         <p class="">55€</p>
                                                                    </div>
-                                                                </a>
-                                                        </article> -->
-                                                </a>
+                                                                </a> --> 
+                                                         
+                                              </div> 
                                </main>
                                <footer>
                                        <div class="flex pt-2 bg">
