finition indes/article

--- a/article.html
+++ b/article.html
@@ -11,7 +11,7 @@
         <body>
                <div class="container bg-1">
                               <header class="flex justify-content items-center rounded-lg w-full bg py-2 px-6 mt">
-                                             <a href=".">
+                                             <a href="index.html">
                                                      <p><img id="imgNorbert" class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
                                              </a>
                                              <nav class="flex">
@@ -22,11 +22,16 @@
                               </header>
                               <main id="main">
                                       <div id="produitlist" class="">
-
+                                       
                                       </div>
+                                    <div class="flex justify-content">
+                                        <select id="nomproduit">
+                                               
+                                       </select>
                                       <a href="panier.html">
                                       <button class=" flex items-center border-radius">ajouter au panier</button>
                                       </a>
+                                    </div>
                               </main>
                               <footer>
                                 <div class="flex pt-2 bg">
