--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <body>
                 <div class="container bg-1">
                                <header class="flex justify-content items-center rounded-lg w-full bg py-2 px-6 mt">
-                                              <a href=".">
+                                              <a href="index.html">
                                                       <p><img id="imgNorbert" class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
                                               </a>
                                               <nav class="flex">
@@ -22,7 +22,7 @@
                                               </nav>
                                </header>
                                <main id="main">
-                                              <div id="produitlist" class="flex col-12 mt-6 justify-content container bg column" >
+                                              <div id="produitlist" class="flex col-12 mt-6 justify-content container bg column border-radius" >
                                                 
                                               </div> 
                                </main>
