--- a/article.html
+++ b/article.html
@@ -28,7 +28,7 @@
                                         <select id="nomproduit">
                                                
                                        </select>
-                                      <a href="panier.html">
+                                      <a id="panier" href="panier.html">
                                       <button class=" flex items-center border-radius">ajouter au panier</button>
                                       </a>
                                     </div>
