--- a/panier.html
+++ b/panier.html
@@ -28,18 +28,19 @@
                                                          <thead>
                                                            <tr>
                                                                  <th>Produit</th>
+                                                                 <th>couleur</th>
                                                                  <th>Quantité</th>
                                                                  <th>Prix</th>
                                                                  <th>total</th>
                                                            </tr>
                                                          </thead>
-                                                         <tbody id="listearticle" class="" >
-
+                                                         <tbody id="listearticle" class="flex justify-content direction width" >
+                                                              
                                                          </tbody>
                                                          <tfoot>
                                                                 <tr>
                                                                         <th class="">total</th>
-                                                                        <th><input class="input" type="number"> </th>
+                                                                        <th><input id="prixtotal" class="input" type="number"> </th>
                                                                 </tr>
                                                          </tfoot>
                                                  </table>
